--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML>
 <html>
- <head>
-     <title>pirates</title>
-     <script src="js/main.js"></script>
-
- </head>
- <body>
-  <p>asdas</p>
- </body>
+<head>
+    <meta charset="utf-8">
+    <title>pirates</title>
+    <script src="js/socket.io.min.js"></script>
+    <script src="js/main.js"></script>
+</head>
+<body>
+    <p>asdas</p>
+    <button id="sendMessage">Пульнуть в общий чат</button>
+    <button id="subscribeChat1">Выбрать чат 1</button>
+    <button id="subscribeChat2">Выбрать чат 2</button>
+</body>
 </html>
