1. Создал ChatManager 2. В ChatManager сохраняются sid в массиве 3. Создал функцию котоорая отправляет сообщения пользователям в определённом радусе

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <p>asdas</p>
-    <button id="sendMessage">Пульнуть в общий чат</button>
+    <input id="message"type="text"><br/>
+    <button id="sendMessage">Send message</button>
     <button id="subscribeChat1">Выбрать чат 1</button>
     <button id="subscribeChat2">Выбрать чат 2</button>
 </body>
